--- a/src/styles.css
+++ b/src/styles.css
@@ -1,38 +1,99 @@
+html,
+body {
+  margin: 0;
+  padding: 0;
+  height: 100%;
+}
+#root {
+  height: 100%;
+}
+
 .App {
+  min-height: 100vh;
+  font-family: sans-serif;
+  text-align: center;
+  padding: 3%;
+}
+
+.img {
+  width: 25%;
+}
+.hidden {
+  display: none;
+  width: 20%;
+}
+.shown {
+  display: show;
+  width: 20%;
+}
+
+.popup {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background: rgba(0, 0, 0, 0.7);
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  z-index: 1000;
+}
+
+.popupContent {
+  background: #fff;
+  padding: 20px;
+  border-radius: 8px;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
   text-align: center;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
+.closeButton {
+  margin-top: 15px;
+  padding: 8px 15px;
+  background-color: #007bff;
   color: white;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
 }
 
-.App-link {
-  color: #61dafb;
+.img {
+  opacity: 0;
+  transition: opacity 0.5s ease;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.img.loaded {
+  opacity: 1;
+}
+
+.show {
+  opacity: 1;
+}
+
+.hide {
+  opacity: 0;
+}
+
+.App.Warmup {
+  background: linear-gradient(135deg, #2efa03, #fb7001);
+}
+.App.Math {
+  background: linear-gradient(135deg, #ff0000, #ffff00);
+}
+.App.pretest {
+  background-color: #007bff;
+}
+.leaderboard {
+  display: inline-block;
+}
+.stBtnShow {
+  display: show;
+}
+.stBtnHide {
+  display: none;
+}
+.sidebar {
+  text-align: center;
 }
